# New_Gemini_Project

./: .env  data.txt  main.py  pyproject.toml
