[tool.poetry]
name = "pyproject-toml"
version = "0.1.0"
description = ""
authors = ["Hamadalishah <hammadalis459@gmail.com>",]
readme = "README.md"
packages = [{include = "pyproject"}]

[tool.poetry.dependencies]
python = "^3.12"
langchain-core = "^0.2.35"
langchain-community = "^0.2.12"
langchain-google-genai = "^1.0.10"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
